# GitActionTest

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
tests/: CMakeLists.txt  test_example.cpp
